@@ -83,10 +83,10 @@
 							fcolor.a="0.9"
 							visibility="${(:i lt 4) ? ':flt' : ':flt and :ebe'}"/>
 					</ui:for>
-					<mesh id="ifg_m" width="0" color="mid_in" color.a="0.8" fcolor.a="0.8" fill="true" fcolor="mid_in" visibility=":ife_m"/>
-					<mesh id="ifg_s" width="0" color="side_in" color.a="0.8" fcolor.a="0.8" fill="true" fcolor="side_in" visibility=":ife_s"/>
-					<mesh id="ofg_m" width="2" color="mid" visibility=":ofe_m"/>
-					<mesh id="ofg_s" width="2" color="side" visibility=":ofe_s"/>
+					<mesh id="ifg_m" oy=":_ui_zoomable_spectrum_graph ? 1 : 3" width="0" color="mid_in" color.a="0.8" fcolor.a="0.8" fill="true" fcolor="mid_in" visibility=":ife_m"/>
+					<mesh id="ifg_s" oy=":_ui_zoomable_spectrum_graph ? 1 : 3" width="0" color="side_in" color.a="0.8" fcolor.a="0.8" fill="true" fcolor="side_in" visibility=":ife_s"/>
+					<mesh id="ofg_m" oy=":_ui_zoomable_spectrum_graph ? 1 : 3" width="2" color="mid" visibility=":ofe_m"/>
+					<mesh id="ofg_s" oy=":_ui_zoomable_spectrum_graph ? 1 : 3" width="2" color="side" visibility=":ofe_s"/>
 
 					<mesh id="ag_m" width="3" color="mid" smooth="true"/>
 					<mesh id="ag_s" width="3" color="side" smooth="true"/>
@@ -224,6 +224,7 @@
 					<axis min="10" max="24000" angle="0.0" log="true" visibility="false"/>
 					<axis min="-72 db / (:zoom ** 3)" max="24 db * :zoom" color="graph_prim" angle="0.5" log="true"/>
 					<axis min="-1" max="1" visibility="false" angle="0.5"/>
+					<axis min="-72 db" max="24 db" color="graph_prim" angle="0.5" log="true" visibility="false"/>
 
 					<!-- Text -->
 					<ui:with ox="0" oy="2" y="0" halign="1" valign="1">
