@@ -4,6 +4,7 @@
 
 === 1.0.5 ===
 * Added possibility to change frequency values by double click.
+* Implemented automatic scale of spectrum graph switch.
 
 
 === 1.0.4 ===
